hard-gists/9679647/run.log
=== Docker Run Log for 9679647 ===
Started at: Mi 29. Okt 18:30:28 CET 2025

[2025-10-29 18:30:28] START: Running container for 9679647
[2025-10-29 18:30:28] SUCCESS: Container 51ed7a7f6e667a463224d5e55a9b65ec335af00b2bbc0a7469c6543d08f05773 started for 9679647
=== Container logs for 9679647 ===
  File "/snippet.py", line 156
    print "<table>"
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9679647 ===
[2025-10-29 18:30:30] INFO: Container 51ed7a7f6e667a463224d5e55a9b65ec335af00b2bbc0a7469c6543d08f05773 has stopped
